--- a/Test/Source/test.ini
+++ b/Test/Source/test.ini
@@ -1,9 +1,9 @@
 [Experiment]
-type: mem2mem
+type = mem2mem
 #type: disk2disk
 [Server]
-IP: 192.168.2.1
-LogFile: /tmp/my_test
+IP = 192.168.2.1
+LogFile = /tmp/my_test
 [Client]
-Number: 1
-LogFile: /tmp/my_test
+Number = 1
+LogFile = /tmp/my_test
